--- a/about-us.html
+++ b/about-us.html
@@ -11,6 +11,7 @@
     href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <link rel="stylesheet" href="assets/css/font/fontawesome.min.css">
   <link rel="stylesheet" href="assets/css/main.min.css">
+  <link rel="stylesheet" href="assets/css/icons.css">
   <link rel="stylesheet" href="assets/css/pages/about-us.css">
   <!-- plugins -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
@@ -168,6 +169,7 @@
             <div class="row">
               <div class="col-lg-3">
                 <div class="card">
+                  <span class="icon-user"></span>
                   <p>Client-Centric
                     Work Environment
                     </p>
@@ -175,6 +177,7 @@
               </div>
               <div class="col-lg-3">
                 <div class="card">
+                  <span class="icon-open"></span>
                   <p>Client-Centric
                     Work Environment
                     </p>
@@ -182,6 +185,7 @@
               </div>
               <div class="col-lg-3">
                 <div class="card">
+                  <span class="icon-trends"></span>
                   <p>Client-Centric
                     Work Environment
                     </p>
@@ -189,6 +193,7 @@
               </div>
               <div class="col-lg-3">
                 <div class="card">
+                  <span class="icon-trans"></span>
                   <p>Client-Centric
                     Work Environment
                     </p>
@@ -208,7 +213,7 @@
             <div class="card">
               <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
-                <img src="" alt="">
+                <img src="assets/images/team1.jpeg" alt="">
               </figure>
               <p>Avery Davis </p>
               <span>MARKETING EXPERT</span>
@@ -218,7 +223,7 @@
             <div class="card">
               <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
-                <img src="" alt="">
+                <img src="assets/images/team2.jpg" alt="">
               </figure>
               <p>Avery Davis </p>
               <span>MARKETING EXPERT</span>
@@ -228,7 +233,7 @@
             <div class="card">
               <div class="pill"><i class="fa-brands fa-linkedin-in"></i></div>
               <figure>
-                <img src="" alt="">
+                <img src="assets/images/team1.jpeg" alt="">
               </figure>
               <p>Avery Davis </p>
               <span>MARKETING EXPERT</span>
@@ -248,15 +253,33 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/mol-bahrain.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -359,7 +382,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xxx x xxxxx xxxxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
