--- a/blog.html
+++ b/blog.html
@@ -246,7 +246,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xxxx xxxxx xxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
