--- a/business-setup/freezone.html
+++ b/business-setup/freezone.html
@@ -161,6 +161,7 @@
        <div class="row">
          <div class="col-lg-4">
            <div class="card">
+            <span class="icon-user"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -169,6 +170,7 @@
            </div>
          </div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-open"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -176,6 +178,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-trends"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -183,6 +186,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-user"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -190,6 +194,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-open"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -197,6 +202,7 @@
                success.</p>
            </div></div>
          <div class="col-lg-4"><div class="card">
+          <span class="icon-trends"></span>
              <strong>Extensive Business Opportunities</strong>
              <p>Mainland companies can trade
                everywhere in the UAE. Access to a
@@ -215,32 +221,112 @@
         <div class="lists">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Dubai</button>
+              <button class="nav-link active" id="Dubai-tab" data-bs-toggle="tab" data-bs-target="#Dubai-tab-pane" type="button" role="tab" aria-controls="Dubai-tab-pane" aria-selected="true">Dubai</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Abu Dhabi</button>
+              <button class="nav-link" id="Abu-Dhabi-tab" data-bs-toggle="tab" data-bs-target="#Abu-Dhabi-tab-pane" type="button" role="tab" aria-controls="Abu-Dhabi-tab-pane" aria-selected="false">Abu Dhabi</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Sharjah</button>
+              <button class="nav-link" id="Sharjah-tab" data-bs-toggle="tab" data-bs-target="#Sharjah-tab-pane" type="button" role="tab" aria-controls="Sharjah-tab-pane" aria-selected="false">Sharjah</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">RAK</button>
+              <button class="nav-link" id="RAK-tab" data-bs-toggle="tab" data-bs-target="#RAK-tab-pane" type="button" role="tab" aria-controls="RAK-tab-pane" aria-selected="false">RAK</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Fujairah</button>
+              <button class="nav-link" id="Fujairah-tab" data-bs-toggle="tab" data-bs-target="#Fujairah-tab-pane" type="button" role="tab" aria-controls="Fujairah-tab-pane" aria-selected="false">Fujairah</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">Ajman</button>
+              <button class="nav-link" id="Ajman-tab" data-bs-toggle="tab" data-bs-target="#Ajman-tab-pane" type="button" role="tab" aria-controls="Ajman-tab-pane" aria-selected="false">Ajman</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false">ULQ</button>
+              <button class="nav-link" id="ULQ-tab" data-bs-toggle="tab" data-bs-target="#ULQ-tab-pane" type="button" role="tab" aria-controls="ULQ-tab-pane" aria-selected="false">ULQ</button>
             </li>
           </ul>
           <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">...</div>
-            <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
+            <div class="tab-pane fade show active" id="Dubai-tab-pane" role="tabpanel" aria-labelledby="Dubai-tab" tabindex="0">
+              <div class="logo-list">
+                 <img src="../assets/images/ifza.png" alt="">
+                 <img src="../assets/images/rakez.jpg" alt="">
+                 <img src="../assets/images/cmc.jpeg" alt="">
+                 <img src="../assets/images/ifza.png" alt="">
+                 <img src="../assets/images/ifza.png" alt="">
+                 <img src="../assets/images/rakez.jpg" alt="">
+                 <img src="../assets/images/cmc.jpeg" alt="">
+                 <img src="../assets/images/ifza.png" alt="">
+              </div>
+            </div>
+            <div class="tab-pane fade" id="Abu-Dhabi-tab-pane" role="tabpanel" aria-labelledby="Abu-Dhabi-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
+            <div class="tab-pane fade" id="Sharjah-tab-pane" role="tabpanel" aria-labelledby="Sharjah-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
+            <div class="tab-pane fade" id="RAK-tab-pane" role="tabpanel" aria-labelledby="RAK-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
+            <div class="tab-pane fade" id="Fujairah-tab-pane" role="tabpanel" aria-labelledby="Fujairah-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
+            <div class="tab-pane fade" id="Ajman-tab-pane" role="tabpanel" aria-labelledby="Ajman-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
+            <div class="tab-pane fade" id="ULQ-tab-pane" role="tabpanel" aria-labelledby="ULQ-tab" tabindex="0">
+              <div class="logo-list">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+                <img src="../assets/images/rakez.jpg" alt="">
+                <img src="../assets/images/cmc.jpeg" alt="">
+                <img src="../assets/images/ifza.png" alt="">
+             </div>
+            </div>
           </div>
         </div>
       </div>
@@ -455,15 +541,33 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/mol-bahrain.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
