--- a/business-setup/minland.html
+++ b/business-setup/minland.html
@@ -159,7 +159,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="card">
-              <span class="icon"></span>
+              <span class="icon-user"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -168,6 +168,7 @@
             </div>
           </div>
           <div class="col-lg-4"><div class="card">
+            <span class="icon-open"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -175,6 +176,7 @@
                 success.</p>
             </div></div>
           <div class="col-lg-4"><div class="card">
+            <span class="icon-trends"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -182,6 +184,7 @@
                 success.</p>
             </div></div>
           <div class="col-lg-4"><div class="card">
+            <span class="icon-user"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -189,6 +192,7 @@
                 success.</p>
             </div></div>
           <div class="col-lg-4"><div class="card">
+            <span class="icon-open"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -196,6 +200,7 @@
                 success.</p>
             </div></div>
           <div class="col-lg-4"><div class="card">
+            <span class="icon-trends"></span>
               <strong>Extensive Business Opportunities</strong>
               <p>Mainland companies can trade
                 everywhere in the UAE. Access to a
@@ -361,11 +366,11 @@
           signifies that you are a legitimate business in adherence with compliance regulations</p>
           <p></p>
             <ul>
-              <li><strong>Commercial License:</strong> Ideal for trading and general business activities.
+              <li><strong>Commercial License</strong> Ideal for trading and general business activities.
               </li>
-              <li><strong>Professional License:</strong>For service-oriented businesses like consultancy and design</li>
-              <li><strong>Industrial License:</strong>For manufacturing and production-based companies</li>
-              <li><strong>Tourism License:</strong>Tailored for travel agencies and hospitality businesses.
+              <li><strong>Professional License</strong>For service-oriented businesses like consultancy and design</li>
+              <li><strong>Industrial License</strong>For manufacturing and production-based companies</li>
+              <li><strong>Tourism License</strong>Tailored for travel agencies and hospitality businesses.
               </li>
             </ul>
             <p>Our team handles the end-to-end process, ensuring your license is approved without delays.
@@ -574,15 +579,33 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/mol-bahrain.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -685,7 +708,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xx x xxx x xxxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
