--- a/contact.html
+++ b/contact.html
@@ -225,7 +225,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                 <span>California, TX 70240</span>
+                 <span>xxx xx x x xxxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a></li>
