--- a/affiliated-services.html
+++ b/affiliated-services.html
@@ -280,7 +280,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xxx xxxxxx xxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
