--- a/business-setup.html
+++ b/business-setup.html
@@ -362,15 +362,33 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/mol-bahrain.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/bahrain-economic-dpt.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/dept-of-trnsport-abudhabi.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/images/works/creatve-cty-fuj.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -472,7 +490,7 @@
               <ul>
                 <li>
                   <strong>Address</strong>
-                  <span>California, TX 70240</span>
+                  <span>xx x xxxxxxx</span>
                 <li>
                   <strong>Email</strong>
                   <a href="mailto:">support@createbiz.com</a>
