--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             <div class="card">
               <div class="pill">15 july, 2024</div>
               <figure>
-                <img src="/assets/images/blog.jpg" alt="blog">
+                <img src="assets/images/blog.jpg" alt="blog">
               </figure> 
               <div class="card-footer">
                 <p>The for fully had she there leave merit enjoy forth.</p>
@@ -402,7 +402,7 @@
             <div class="card">
               <div class="pill">15 july, 2024</div>
               <figure>
-                <img src="/assets/images/blog.jpg" alt="blog">
+                <img src="assets/images/blog.jpg" alt="blog">
               </figure>
               <div class="card-footer">
                 <p>The for fully had she there leave merit enjoy forth.</p>
@@ -414,7 +414,7 @@
             <div class="card">
               <div class="pill">15 july, 2024</div>
               <figure>
-                <img src="/assets/images/blog.jpg" alt="blog">
+                <img src="assets/images/blog.jpg" alt="blog">
               </figure>
               <div class="card-footer">
                 <p>The for fully had she there leave merit enjoy forth.</p>
